# agentic-it-support

./: .env.example  .gitignore  README.md  bootstrap.py  cli.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: decisions.py  llm.py  parser.py  proposals.py
agent/prompts/: clarifying.py  escalating.py  intake.py  investigating.py  resolving.py
api/: routes.py  schemas.py  server.py  types.py
config/: settings.py
data/knowledge_base/: password_reset.md  software_access.md  vpn_troubleshooting.md
data/policies/: policies.json
data/resolution_history/: history.json
data/system_status/: status.json
data/user_directory/: users.json
docs/: Architecture & State.drawio  Structure and transition Diagram.drawio
evaluation/: __init__.py  runner.py
evaluation/scenarios/: 01_vpn_troubleshooting.json  02_password_reset_guidance.json  03_known_service_degradation.json  04_mfa_recovery_escalation.json  05_access_grant_policy_route.json  05_repeated_vague_input_soft_close.json  06_network_config_escalation.json  07_teamwide_vpn_issue_investigation.json  08_failed_vpn_fix_continues_investigation.json  password_reset.json  vpn_timeout.json  (+1 more)
llm/: __init__.py  client.py
observability/: cost.py  event_tracing.py  logger.py  spinner.py
policy/: __init__.py  engine.py
runtime/: action_executor.py  budget.py  calibration.py  confidence.py  constants.py  controller.py  diagnosis_policy.py  limits.py  message_builder.py  query_loop.py  transitions.py  validator.py  workflow_guard.py
state/: budget.py  case_state.py  session.py
tools/: __init__.py  kb_search.py  policy_lookup.py  resolution_history.py  status_api.py  user_directory.py
(+75 files in other folders)
