[project]
name = "agentic-it-support"
version = "0.1.0"
description = "Agentic IT Helpdesk Support Agent"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
