[project]
name = "agentic-it-support"
version = "0.1.0"
description = "Agentic IT Helpdesk Support Agent"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]

[project.scripts]
agentic-it-api = "agentic_it_support.main:main"
agentic-it-cli = "agentic_it_support.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_it_support"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
